# marvis

./: README.md  pyproject.toml
docs/: code-styles-python.md  preferred-libraries.md  pyats-genie-lib-parsers.md  pyats-genie-ops.md  pydantic-ai-agents.md  pydantic-ai-anthropic.md  pydantic-ai-gemini.md  pydantic-ai-message-history.md  pydantic-ai-openai.md  pydantic-ai-output.md  requirements.md
marvis/: config_loader.py  data_models.py  llm_handler.py  manager.py  network_utils.py  pyats_handler.py  report_builder.py
